--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,9 +6,8 @@ body{
 /* header related styles */
 .banner{
     background-color: #E554731A;
-    padding: 50px 200px 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -23,11 +22,18 @@ body{
     color: #27272799;
     font-size: 18px;
     font-weight: 400;
+    line-height: 30px;
+    padding: 20px 0px;
 }
 
 .banner-pic{
     width: 630px;
     height: 800px;  
+}
+
+.banner-pic > img{
+    width: 100%;
+    height: 100%;
 }
 
 .btn-primary{
@@ -38,4 +44,65 @@ body{
     font-size: 20px;
     font-weight: 700;
     padding: 20px 43px;
+}
+
+/* main section styles */
+.main-section{
+   margin-left: 100px;
+   margin-right: 100px;
+}
+
+.main-header{
+    margin-top: 30px;
+    margin-bottom: 50px;
+    text-align: center;
+    color: #272727;
+}
+
+.main-items{
+    display: flex;
+    gap: 20px;
+    border: 0;   
+}
+
+.main-section .main-items > .item:nth-child(1){
+    border-radius: 300px 300px 0px 0px;
+    background: #a7216226;
+    padding: 110px 78px 0px 78px;
+}
+.main-section .main-items > .item:nth-child(2){
+    border-radius: 300px 300px 0px 0px;
+    background: #0597a026;
+    padding: 110px 78px 0px 78px;
+}
+
+
+.main-section .main-items > .item:nth-child(3){
+    border-radius: 300px 300px 0px 0px;
+    background: #477d1126;
+    padding: 110px 78px 0px 78px;
+}
+
+/* list element styles */
+
+ul, li{
+    display: flex;
+    text-decoration: underline;
+    color: #272727;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 35px;
+    margin-right: 150px;
+    margin-left: 150;
+
+}
+.ul-text1{
+    margin-left: 100px;
+}
+.ul-text2{
+    margin-left: 140px;
+}
+.ul-text3{
+    margin-left: 200px;
 }
