--- a/styles/styles.css
+++ b/styles/styles.css
@@ -142,3 +142,26 @@ ul, li{
     font-size: 18px;
     font-weight: 400;
 }
+
+/* insta section styles */
+
+.insta{
+    color: #272727;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 0px;
+    
+}
+.insta-text{
+    color: #27272799;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+}
+.insta-img{
+    background: #FFF;
+    margin: 30px 150px 50px 150px;
+    display: flex;
+    gap: 20px;
+}
