--- a/styles/styles.css
+++ b/styles/styles.css
@@ -165,3 +165,34 @@ ul, li{
     display: flex;
     gap: 20px;
 }
+
+/* footer section styles */
+
+.footer{
+    background: #111010;
+    padding: 50px 50px;
+    text-align: center;
+}
+
+
+.footer-title{
+    color: #ffffffe6;
+    font-size: 48px;
+    font-weight: 800;
+}
+
+.footer-text{
+    color: #ffffffe6;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.copyright{
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.text-primary{
+    color: #E55473;
+}
